[package]
name = "geolocation_utils"
version = "0.1.0"
edition = "2021"
authors = ["Devin Bidwell <dbidwell94@biddydev.com"]
license = "MIT"

[features]
serde = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163" }
