[package]
name = "geolocation_utils"
version = "0.1.2"
edition = "2021"
authors = ["Devin Bidwell <dbidwell94@biddydev.com"]
license = "MIT"
description = "A repository which will allow easier calculations of bounds based on latitude and longitude coordinates"
repository = "https://github.com/dbidwell94/geolocation_utils"

[features]
serde = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163" }
